feat: expand listening library sources
